--- a/lib/trees_web/controllers/page_html/home.html.heex
+++ b/lib/trees_web/controllers/page_html/home.html.heex
@@ -1,17 +1,22 @@
 <.flash_group flash={@flash} />
 <div id="menu" class="absolute z-10 pointer-events-none">
   <div class="p-4 flex flex-col space-y-4">
-    <div data-type="tree:alder" class="item pointer-events-auto">
+    <div data-type="tree:alder" class="group item pointer-events-auto flex items-center">
       <div class="rounded-full w-4 h-4 p-4 border border-gray-400 bg-orange-400 hover:bg-orange-500"></div>
-      alder
+      <span class="mx-2 dark:text-white transition-all opacity-0 group-hover:opacity-100">alder</span>
     </div>
-    <div data-type="tree:oak" class="item pointer-events-auto">
+    <div data-type="tree:oak" class="group item pointer-events-auto flex items-center">
       <div class="rounded-full w-4 h-4 p-4 border border-gray-400 bg-violet-400 hover:bg-violet-500"></div>
-      oak
+      <span class="mx-2 dark:text-white transition-all opacity-0 group-hover:opacity-100">oak</span>
     </div>
     <div class="pointer-events-auto">
-      <button id="sound" class="block p-2 rounded-md bg-red-100 hover:bg-red-200">sound</button>
+      <button id="sound" class="block p-2 rounded-md bg-red-100 hover:bg-red-200">
+        <.icon name="hero-speaker-wave" />
+        <.icon name="hero-speaker-x-mark" />
+      </button>
     </div>
   </div>
 </div>
-<div id="canvas" class="absolute z-0 bg-green-50 overflow-hidden"></div>
+<div class="w-screen h-screen custom-bg animate-bg">
+  <div id="canvas" class="absolute z-0 dark:bg-slate-600 dark:bg-opacity-50 overflow-hidden"></div>
+</div>
