--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -19,6 +19,9 @@
 # export RELEASE_DISTRIBUTION=name
 # export RELEASE_NODE=<%= @release.name %>
 
-ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
-export RELEASE_DISTRIBUTION=name
-export RELEASE_NODE=$FLY_APP_NAME@$ip
+if [ ! -n $LOCAL ]
+then
+    ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
+    export RELEASE_DISTRIBUTION=name
+    export RELEASE_NODE=$FLY_APP_NAME@$ip
+fi
