--- a/lib/trees_web/controllers/page_html/home.html.heex
+++ b/lib/trees_web/controllers/page_html/home.html.heex
@@ -3,11 +3,23 @@
   <div class="p-4 flex flex-col space-y-4">
     <div data-type="tree:alder" class="group item pointer-events-auto flex items-center">
       <div class="rounded-full w-4 h-4 p-4 border border-gray-400 bg-orange-400 hover:bg-orange-500"></div>
-      <span class="mx-2 dark:text-white transition-all opacity-0 group-hover:opacity-100">alder</span>
+      <span class="mx-2 text-white transition-all opacity-0 group-hover:opacity-100">alder</span>
     </div>
     <div data-type="tree:oak" class="group item pointer-events-auto flex items-center">
       <div class="rounded-full w-4 h-4 p-4 border border-gray-400 bg-violet-400 hover:bg-violet-500"></div>
-      <span class="mx-2 dark:text-white transition-all opacity-0 group-hover:opacity-100">oak</span>
+      <span class="mx-2 text-white transition-all opacity-0 group-hover:opacity-100">cherry</span>
+    </div>
+    <div data-type="tree:stump" class="group item pointer-events-auto flex items-center">
+      <div class="rounded-full w-4 h-4 p-4 border border-gray-400 bg-emerald-400 hover:bg-emerald-500"></div>
+      <span class="mx-2 text-white transition-all opacity-0 group-hover:opacity-100">stump</span>
+    </div>
+    <div data-type="tree:tree" class="group item pointer-events-auto flex items-center">
+      <div class="rounded-full w-4 h-4 p-4 border border-gray-400 bg-pink-400 hover:bg-pink-500"></div>
+      <span class="mx-2 text-white transition-all opacity-0 group-hover:opacity-100">tree</span>
+    </div>
+    <div data-type="destroy" class="group item pointer-events-auto flex items-center">
+      <div class="rounded-full w-4 h-4 p-4 border border-gray-400 bg-yellow-400 hover:bg-yellow-500"></div>
+      <span class="mx-2 text-white transition-all opacity-0 group-hover:opacity-100">deleted</span>
     </div>
     <div class="pointer-events-auto">
       <button id="sound" class="block p-2 rounded-md bg-red-100 hover:bg-red-200">
@@ -17,6 +29,11 @@
     </div>
   </div>
 </div>
-<div class="w-screen h-screen custom-bg animate-bg">
-  <div id="canvas" class="absolute z-0 dark:bg-slate-600 dark:bg-opacity-50 overflow-hidden"></div>
+<div class="w-screen h-screen">
+  <div id="canvas" 
+    class={[
+      "absolute z-0",
+      "bg-gradient-to-tr from-[#000503] via-[#053026] to-[#025C71]",
+      "dark:bg-slate-600 dark:bg-opacity-50 overflow-hidden"
+      ]}></div>
 </div>
