--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -1,27 +1,9 @@
 #!/bin/sh
 
-# # Sets and enables heart (recommended only in daemon mode)
-# case $RELEASE_COMMAND in
-#   daemon*)
-#     HEART_COMMAND="$RELEASE_ROOT/bin/$RELEASE_NAME $RELEASE_COMMAND"
-#     export HEART_COMMAND
-#     export ELIXIR_ERL_OPTIONS="-heart"
-#     ;;
-#   *)
-#     ;;
-# esac
+# Config for DNS Cluster Strategy
+export ERL_AFLAGS="-proto_dist inet6_tcp"
+export ECTO_IPV6="true"
 
-# # Set the release to load code on demand (interactive) instead of preloading (embedded).
-# export RELEASE_MODE=interactive
-
-# # Set the release to work across nodes.
-# # RELEASE_DISTRIBUTION must be "sname" (local), "name" (distributed) or "none".
-# export RELEASE_DISTRIBUTION=name
-# export RELEASE_NODE=<%= @release.name %>
-
-if [ ! -n $LOCAL ]
-then
-    ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
-    export RELEASE_DISTRIBUTION=name
-    export RELEASE_NODE=$FLY_APP_NAME@$ip
-fi
+ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
+export RELEASE_DISTRIBUTION=name
+export RELEASE_NODE=$FLY_APP_NAME@$ip
